tests/corpus/negative/N10-nested-function/source.py
def outer(value):
    def inner():
        return value
    return value

